--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="movie">
         <div class="movie-informations">
           <div class="movie-image">
-            <img src="https://img.elo7.com.br/product/original/3FBA809/big-poster-filme-batman-2022-90x60-cm-lo002-poster-batman.jpg" alt="Batman (2022)"/>
+            <img src="E:\Documentos\labs\fabricioTeacher\images\bat2022.jfif" alt="Batman (2022)"/>
           </div>
           <div class="movie-text">
             <h4>Batman (2022)</h4>
@@ -49,14 +49,14 @@
       <div class="movie">
         <div class="movie-informations">
           <div class="movie-image">
-            <img src="https://img.elo7.com.br/product/original/3FBA809/big-poster-filme-batman-2022-90x60-cm-lo002-poster-batman.jpg" alt="Batman (2022)"/>
+            <img src="E:\Documentos\labs\fabricioTeacher\images\bat2008.jfif" alt="Batman (2022)"/>
           </div>
           <div class="movie-text">
-            <h4>Batman (2022)</h4>
+            <h4>Batman (2008)</h4>
             <div class="rating-favorites">
               <div class="rating">
                 <img src="images/star.png" alt="Star Icon"/>
-                <span>9.2</span>
+                <span>9.0</span>
               </div>
               <div class="favorite">
                 <img src="images/heart.svg" alt="Star Icon"/>
@@ -73,14 +73,14 @@
       <div class="movie">
         <div class="movie-informations">
           <div class="movie-image">
-            <img src="https://img.elo7.com.br/product/original/3FBA809/big-poster-filme-batman-2022-90x60-cm-lo002-poster-batman.jpg" alt="Batman (2022)"/>
+            <img src="E:\Documentos\labs\fabricioTeacher\images\bat1989.jfif" alt="Batman (2022)"/>
           </div>
           <div class="movie-text">
-            <h4>Batman (2022)</h4>
+            <h4>Batman (1989)</h4>
             <div class="rating-favorites">
               <div class="rating">
                 <img src="images/star.png" alt="Star Icon"/>
-                <span>9.2</span>
+                <span>7.5</span>
               </div>
               <div class="favorite">
                 <img src="images/heart.svg" alt="Star Icon"/>
