--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <div class="favorite">
                 <img src="images/heart.svg" alt="Star Icon"/>
                 <span>Favoritar</span>
-<!--              </div> -->
+              </div>
             </div>
           </div>
         </div>
